fixes spacing on header

--- a/_sass/06_components/header.scss
+++ b/_sass/06_components/header.scss
@@ -1,5 +1,5 @@
 .c-header__nav-bar {
-  padding: $spacing-large;
+  padding: $spacing-small;
   padding-bottom: 0;
 }
 
@@ -65,7 +65,7 @@
 }
 
 .c-header__wrapper {
-  padding: $spacing-large;
+  padding: $spacing-small;
 
   @media #{$medium-up} {
     display: flex;
